# test-agent

./: .dockerignore  .env.example  .gitignore  CHAT_SESSIONS.md  CLEAN_ARCHITECTURE.md  Dockerfile  MIGRATION_SUMMARY.md  README.md  README_MCP.md  azdo_agent.py  azdo_module.py  config.py  gemini_service.py  main.py  models.py  pbi_module.py  pbi_processor.py  pyproject.toml  requirements.txt  test_setup.py
.github/: copilot-instructions.md
src/: __init__.py  azdo_client.py  chat_manager.py  llm_client.py  main.py  models.py  server_api.py  server_api_v2.py  server_mcp.py
src/agent/: slack_agent.py
src/api/: __init__.py  dependencies.py  dtos.py  mappers.py  routes.py
src/config/: settings.py
src/domain/: __init__.py  entities.py  repositories.py  services.py
src/extractors/: __init__.py  azdo.py  pbi.py
src/infrastructure/: __init__.py
src/infrastructure/repositories/: in_memory_chat_repository.py
src/infrastructure/services/: azdo_service.py  dspy_extraction_service.py
src/services/: gemini_service.py
src/use_cases/: __init__.py  chat_session_use_cases.py
